--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "7.8.1",
-    "@mantine/hooks": "7.8.1",
-    "next": "14.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@mantine/carousel": "^7.9.1",
+    "@mantine/core": "7.9.1",
+    "@mantine/hooks": "7.9.1",
+    "@prisma/client": "^5.14.0",
+    "@tabler/icons-react": "^3.3.0",
+    "embla-carousel-autoplay": "^7.1.0",
+    "embla-carousel-react": "^7.1.0",
+    "next": "14.2.3",
+    "prisma": "^5.14.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "20.11.26",
-    "@types/react": "18.2.65",
-    "@types/react-dom": "18.2.21",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
-    "postcss": "^8.4.35",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "eslint": "9.2.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
     "postcss-preset-mantine": "1.15.0",
     "postcss-simple-vars": "^7.0.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.5"
   },
   "packageManager": "yarn@4.1.1"
 }
