--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@mantine/carousel": "^7.9.1",
     "@mantine/core": "7.9.1",
+    "@mantine/form": "^7.10.0",
     "@mantine/hooks": "7.9.1",
     "@mantine/modals": "^7.9.2",
     "@prisma/client": "^5.14.0",
     "@tabler/icons-react": "^3.3.0",
+    "bcrypt": "^5.1.1",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.3",
@@ -24,6 +26,7 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
