--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/carousel": "^7.9.1",
+    "@mantine/colors-generator": "^7.10.0",
     "@mantine/core": "7.9.1",
     "@mantine/form": "^7.10.0",
     "@mantine/hooks": "7.9.1",
@@ -17,6 +18,7 @@
     "@prisma/client": "^5.14.0",
     "@tabler/icons-react": "^3.3.0",
     "bcrypt": "^5.1.1",
+    "chroma-js": "^2.4.2",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.3",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5",
+    "@types/chroma-js": "^2",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
