--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.10.0",
     "@mantine/hooks": "7.9.1",
     "@mantine/modals": "^7.9.2",
+    "@next/font": "^14.2.3",
     "@prisma/client": "^5.14.0",
     "@tabler/icons-react": "^3.3.0",
     "bcrypt": "^5.1.1",
