[WIP] Auth Attempt

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@prisma/client": "^5.14.0",
     "@tabler/icons-react": "^3.3.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chroma-js": "^2.4.2",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "prisma": "^5.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5",
+    "@types/bcryptjs": "^2",
     "@types/chroma-js": "^2",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
