--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prisma": "^5.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "resend": "^3.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5",
