--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.2.0",
     "@aws-sdk/client-s3": "^3.588.0",
     "@aws-sdk/s3-request-presigner": "^3.588.0",
     "@mantine/carousel": "^7.9.1",
@@ -24,6 +25,7 @@
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "prisma": "^5.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
