--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.3.1",
     "react-email": "2.1.4",
     "react-icons": "^5.2.1",
+    "react-imask": "^7.6.1",
     "resend": "^3.3.0"
   },
   "devDependencies": {
