Added a form to generate and print PI PDFs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       "@/fonts": ["./styles/fonts"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "PDFTemplates/PI/PIPDF.tsx"
+  ],
   "exclude": ["node_modules"]
 }
