--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
+    "pdfmake": "^0.2.14",
     "prisma": "^5.20.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -40,6 +41,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/chroma-js": "^2.4.4",
     "@types/node": "20.16.10",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
     "eslint": "9.11.1",
