--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "@mantine/form": "^7.13.1",
     "@mantine/hooks": "7.13.1",
     "@mantine/modals": "^7.13.1",
-    "@prisma/client": "^5.20.0",
     "@react-email/components": "0.0.19",
     "@tabler/icons-react": "^3.19.0",
     "bcrypt": "^5.1.1",
     "chroma-js": "^2.6.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "mysql2": "^3.11.3",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "pdfmake": "^0.2.14",
-    "prisma": "^5.20.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-email": "2.1.6",
@@ -40,7 +39,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/chroma-js": "^2.4.4",
-    "@types/node": "20.16.10",
+    "@types/node": "^22.8.2",
     "@types/pdfmake": "^0.2.9",
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
@@ -52,5 +51,5 @@
     "typescript": "5.6.2"
   },
   "type": "module",
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.5.1"
 }
