--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-email": "2.1.6",
     "react-icons": "^5.3.0",
     "react-imask": "^7.6.1",
-    "resend": "^3.3.0"
+    "resend": "^3.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
