--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "chroma-js": "^2.6.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "fs": "^0.0.1-security",
     "mysql2": "^3.11.3",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
+    "papaparse": "^5.4.1",
+    "path": "^0.12.7",
     "pdfmake": "^0.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -40,7 +43,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/chroma-js": "^2.4.4",
-    "@types/node": "^22.8.2",
+    "@types/node": "^22.10.2",
+    "@types/papaparse": "^5",
     "@types/pdfmake": "^0.2.9",
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
