--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/carousel": "^7.13.1",
     "@mantine/colors-generator": "^7.13.1",
     "@mantine/core": "7.13.1",
+    "@mantine/dropzone": "^7.16.0",
     "@mantine/form": "^7.13.1",
     "@mantine/hooks": "7.13.1",
     "@mantine/modals": "^7.13.1",
