--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.3.0",
     "react-imask": "^7.6.1",
     "resend": "^3.3.0",
+    "sass": "^1.83.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
