--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/hooks": "7.16.0",
     "@mantine/modals": "^7.16.0",
     "@react-email/components": "0.0.19",
+    "@react-pdf/renderer": "^4.1.6",
     "@tabler/icons-react": "^3.28.1",
     "bcrypt": "^5.1.1",
     "chroma-js": "^2.6.0",
