--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/carousel": "^7.16.0",
     "@mantine/colors-generator": "^7.16.0",
     "@mantine/core": "7.16.0",
+    "@mantine/dates": "^7.16.2",
     "@mantine/dropzone": "^7.16.0",
     "@mantine/form": "^7.16.0",
     "@mantine/hooks": "7.16.0",
@@ -24,6 +25,7 @@
     "@vercel/blob": "^0.27.1",
     "bcrypt": "^5.1.1",
     "chroma-js": "^2.6.0",
+    "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "fs": "^0.0.1-security",
