--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "embla-carousel-react": "^7.1.0",
     "fs": "^0.0.1-security",
     "mysql2": "^3.12.0",
-    "next": "14.2.23",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.1",
     "path": "^0.12.7",
     "pdfmake": "^0.2.18",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-email": "2.1.6",
     "react-icons": "^5.4.0",
     "react-imask": "^7.6.1",
