--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@mantine/carousel": "^7.16.0",
-    "@mantine/colors-generator": "^7.16.0",
-    "@mantine/core": "7.16.0",
-    "@mantine/dates": "^7.16.2",
-    "@mantine/dropzone": "^7.16.0",
-    "@mantine/form": "^7.16.0",
-    "@mantine/hooks": "7.16.0",
-    "@mantine/modals": "^7.16.0",
+    "@mantine/carousel": "7.17.7",
+    "@mantine/colors-generator": "7.17.7",
+    "@mantine/core": "7.17.7",
+    "@mantine/dates": "7.17.7",
+    "@mantine/dropzone": "7.17.7",
+    "@mantine/form": "7.17.7",
+    "@mantine/hooks": "7.17.7",
+    "@mantine/modals": "7.17.7",
     "@react-email/components": "0.0.19",
     "@react-pdf/renderer": "^4.1.6",
     "@tabler/icons-react": "^3.28.1",
@@ -35,8 +35,9 @@
     "papaparse": "^5.5.1",
     "path": "^0.12.7",
     "pdfmake": "^0.2.18",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+
     "react-email": "2.1.6",
     "react-icons": "^5.4.0",
     "react-imask": "^7.6.1",
@@ -52,13 +53,18 @@
     "@types/pdfmake": "^0.2.11",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
-    "eslint": "9.19.0",
-    "eslint-config-next": "14.2.23",
+    "eslint": "^8.57.0",  
+    "eslint-config-next":"14.2.23",
     "postcss": "^8.5.1",
     "postcss-preset-mantine": "1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "5.7.3"
   },
+  "engines": {
+  "node": "18.x",
+  "yarn": "1.22.19"
+  },
+
   "type": "module",
   "packageManager": "yarn@4.5.1"
 }
