--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/form": "7.17.7",
     "@mantine/hooks": "7.17.7",
     "@mantine/modals": "7.17.7",
+    "@prisma/client": "^6.8.2",
     "@react-email/components": "0.0.19",
     "@react-pdf/renderer": "^4.1.6",
     "@tabler/icons-react": "^3.28.1",
@@ -26,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "chroma-js": "^2.6.0",
     "dayjs": "^1.11.13",
+    "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "fs": "^0.0.1-security",
@@ -37,7 +39,6 @@
     "pdfmake": "^0.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
     "react-email": "2.1.6",
     "react-icons": "^5.4.0",
     "react-imask": "^7.6.1",
@@ -53,18 +54,17 @@
     "@types/pdfmake": "^0.2.11",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
-    "eslint": "^8.57.0",  
-    "eslint-config-next":"14.2.23",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.23",
     "postcss": "^8.5.1",
     "postcss-preset-mantine": "1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "5.7.3"
   },
   "engines": {
-  "node": "22.x",
-  "yarn": "1.22.19"
+    "node": "22.x",
+    "yarn": "1.22.19"
   },
-
   "type": "module",
   "packageManager": "yarn@4.5.1"
 }
