--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "embla-carousel-react": "^7.1.0",
     "fs": "^0.0.1-security",
     "mysql2": "^3.12.0",
-    "next": "^15.3.2",
+    "next": "14.2.23",
     "next-auth": "^4.24.11",
     "papaparse": "^5.5.1",
     "path": "^0.12.7",
@@ -55,7 +55,7 @@
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.23",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8.5.1",
     "postcss-preset-mantine": "1.17.0",
     "postcss-simple-vars": "^7.0.1",
