ajustes de tratamento de API e conexão com banco

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-RESEND_API_KEY=re_123456789abcdef
-
-MYSQL_HOST=localhost
-MYSQL_DATABASE=mexooh
-MYSQL_USER=mexooh
-MYSQL_PASSWORD=codema2025
-MYSQL_PORT=3306
-
+DB_HOST=181.233.115.228
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=codema
+DB_NAME=midia_ed
