--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@mantine/carousel": "7.17.7",
+    "@mantine/carousel": "^8.0.2",
     "@mantine/colors-generator": "7.17.7",
     "@mantine/core": "7.17.7",
     "@mantine/dates": "7.17.7",
     "@mantine/dropzone": "7.17.7",
     "@mantine/form": "7.17.7",
-    "@mantine/hooks": "7.17.7",
+    "@mantine/hooks": "^8.0.2",
     "@mantine/modals": "7.17.7",
     "@prisma/client": "^6.8.2",
     "@react-email/components": "0.0.19",
@@ -29,8 +29,8 @@
     "chroma-js": "^2.6.0",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.6.0",
-    "embla-carousel-autoplay": "^7.1.0",
-    "embla-carousel-react": "^7.1.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "fs": "^0.0.1-security",
     "mysql2": "^3.12.0",
     "next": "14.2.23",
